Fixed styling and layout issues for application portion, not index

--- a/main/static/main/css/index.css
+++ b/main/static/main/css/index.css
@@ -1,4 +1,5 @@
-nav { padding: 2em; }
+nav { padding: 2em; background: transparent; position: absolute; top: 0; left: 0; }
+#messages { position: absolute; }
 main {
     margin: 0;
     padding: 0;
